<resources>
    <string name="app_name">Shoe store</string>

    <string name="channel_name">Notification</string>
    <string name="channel_description">Description</string>
    <string name="forget_password">Forget password</string>
    <string name="suggest_register">Have not an account. Register.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="suggest_login">Have an account. Login</string>
    <string name="next">Next</string>
    <string name="shopping">This is Welcome screen.\nNext to shopping now</string>
    <string name="shopping_ins">This is Instruction screen.\nNext to shopping now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_name">Shoe name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="logout">Logout</string>
</resources>