<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="shareViewModelAddShoe"
                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />

        <variable
                name="shoe"
                type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="HardcodedText"
            android:paddingHorizontal="@dimen/dimen_40dp"
            tools:context=".features.addmore.AddShoeFragment">

        <ImageView
                android:layout_marginTop="@dimen/dimen_40dp"
                android:id="@+id/imgShoe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textAdd"
                style="@style/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_shoe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgShoe" />


        <EditText
                android:focusable="true"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/textAdd"
                android:id="@+id/inputNameShoe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shoe_name"
                android:text="@={shoe.name}"
                android:inputType="text" />


        <EditText
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/inputNameShoe"
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:text="@={shoe.description}"
                android:inputType="text" />

        <EditText
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/inputDescription"
                android:id="@+id/inputSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/size"
                android:inputType="numberDecimal" />

        <EditText
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/inputSize"
                android:id="@+id/inputCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"
                android:text="@={shoe.company}"
                android:inputType="text" />

        <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:id="@+id/btnCancel"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputCompany"
                app:layout_constraintEnd_toStartOf="@id/btnOk" />

        <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btnOk"
                style="@style/ButtonStyle"
                android:onClick="@{() -> shareViewModelAddShoe.onEventAddShoe(shoe.name, shoe.company, shoe.description)}"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toTopOf="@id/btnCancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>