<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="shareViewModelLogin"
                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="HardcodedText"
            android:paddingHorizontal="@dimen/dimen_40dp"
            tools:context=".features.login.LoginFragment">

        <ImageView
                android:layout_marginTop="@dimen/dimen_40dp"
                android:id="@+id/imgSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textLogin"
                style="@style/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgSignIn" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPhoneNumberLogin"
                style="@style/InputTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/textLogin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPhoneNumberLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:text="test@mail.com"
                    android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutLoginPassword"
                style="@style/InputTextCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintTop_toBottomOf="@id/layoutPhoneNumberLogin">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:text="123456"
                    android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/login"
                android:onClick="@{() -> shareViewModelLogin.startNextLoginScreen()}"
                app:layout_constraintTop_toBottomOf="@id/layoutLoginPassword" />

        <TextView
                android:id="@+id/textLoginForgetPass"
                style="@style/ClickableTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/forget_password"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
                android:id="@+id/textSuggestRegister"
                style="@style/ClickableTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/suggest_register"
                app:layout_constraintTop_toBottomOf="@id/textLoginForgetPass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>